force-app/main/default/objects/Migrated_QLG__c/Migrated_QLG__c.object-meta.xml
<CustomObject>
    <label>Migrated QLG</label>
    <nameField>
        <label>Migrated QLG Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Migrated QLG</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>