force-app/main/default/objects/Migrated_QLG__c/fields/SBQQ_Account__c.field-meta.xml
<CustomField>
    <fullName>SBQQ_Account__c</fullName>
    <label>SBQQ__Account</label>
    <length>100</length>
    <type>Text</type>
</CustomField>