force-app/main/default/objects/Migrated_QLG__c/fields/SBQQ_Number__c.field-meta.xml
<CustomField>
    <fullName>SBQQ_Number__c</fullName>
    <label>SBQQ__Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>