force-app/main/default/objects/Migrated_QLG__c/fields/SBQQ_Quote__c.field-meta.xml
<CustomField>
    <fullName>SBQQ_Quote__c</fullName>
    <label>SBQQ__Quote</label>
    <length>100</length>
    <type>Text</type>
</CustomField>