force-app/main/default/objects/Migrated_QLG__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>SBQQ_Account__c</columns>
    <columns>SBQQ_Number__c</columns>
    <columns>SBQQ_Quote__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>